# wii_u_modchip

./: .gitignore  README.md  monitor.py  monitor.sh
cad_designs/A5X_flex/: fp-lib-table  pico_flatflex.kicad_pcb  pico_flatflex.kicad_prl  pico_flatflex.kicad_pro
cad_designs/A5X_flex/CustomFootprints.pretty/: RPi_Pico_SMD_TH_Custom.kicad_mod  TestPoint_THTPad_1.0x1.0mm_Drill0.5mm_WiUReset.kicad_mod
cad_designs/A5X_flex/Gerbers/: pico_flatflex-B_Cu.gbr  pico_flatflex-B_Mask.gbr  pico_flatflex-B_Paste.gbr  pico_flatflex-B_Silkscreen.gbr  pico_flatflex-F_Cu.gbr  pico_flatflex-F_Mask.gbr  pico_flatflex-F_Paste.gbr  pico_flatflex-F_Silkscreen.gbr  pico_flatflex-job.gbrjob
cad_designs/B1X_flex/: fp-info-cache  pico_flatflex.kicad_pcb  pico_flatflex.kicad_prl  pico_flatflex.kicad_pro  pico_flatflex.kicad_sch  pico_flatflex.kicad_sym
cad_designs/B1X_flex/CustomFootprints.pretty/: RPi_Pico_SMD.kicad_mod
cad_designs/pico_flatflex/: fp-info-cache
cad_designs/pico_flatflex/Gerbers/: pico_flatflex-Edge_Cuts.gbr
docs/: nrst_waveform.json
glitch_and_exi/: Makefile  glitch_and_exi.v  icebreaker.pcf  uart_rx.v
pico_defuse/: CMakeLists.txt  README.md  build.sh  miniterm_defuse.py  monitor.sh  tablegen.py
pico_defuse/src/: pico_defuse.c  pico_defuse.pio
